fix: Add overflow auto for figures

--- a/website/sass/styles.scss
+++ b/website/sass/styles.scss
@@ -328,6 +328,12 @@ article.note .metablock {
 
 .figure {
   margin: 2rem 0;
+  overflow-y: auto;
+
+  svg {
+    margin: auto;
+    display: block;
+  }
 }
 
 blockquote {
